fix video on mobile and add source

--- a/src/components/templates/Homepage/Homepage.scss
+++ b/src/components/templates/Homepage/Homepage.scss
@@ -1,7 +1,5 @@
 @use '../../../styles/variables' as *;
 
-
-
 .intro {
   left: 0;
   width: 100%;
@@ -22,7 +20,7 @@
 
   &__button {
     color: white;
-    border: 3px solid white ;
+    border: 3px solid white;
     padding: 1rem;
   }
 
@@ -47,16 +45,16 @@
   }
 }
 
-
 .video {
   width: 100%;
   background-color: black;
   margin-top: 56.5px;
-  height: 100%;
+  height: 90%;
 
-    @media screen and (min-width: $lg) {
-      margin-top: 71px;
-    }
+  @media screen and (min-width: $lg) {
+    margin-top: 71px;
+    height: 100%;
+  }
 
   @media screen and (min-width: $xlg) {
     height: 100vh;
